update modernizer suggestions